--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@ body {
 
     .header {
         height: 48px;
-        background: url('./twitter.png') white no-repeat center;
+        background: url('./utils/twitter.png') white no-repeat center;
         border-bottom: 1px solid rgba(0,0,0,0.3);
         background-size: auto 50%;
 
