--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,9 @@ $blue: #1da1f2;
     font-family: 'Helvetica', 'Arial', sans-serif;
     font-style: normal;
 
-    p, h1, h3, h4 {
+    p, h1, h2, h3, h4, ul, span {
         margin: 0;
+        padding: 0;
     }
 
 }
@@ -27,7 +28,7 @@ body {
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            margin: auto;
+            margin-left: 2%;
             color: #66757f;
 
             .glyphicon-home, .glyphicon-bell, .glyphicon-envelope, .glyphicon-flash {
@@ -38,7 +39,7 @@ body {
                 }
 
                 .nav-name {
-                    font-size: 14px;
+                    font-size: 13px;
                     font-weight: bold;
                     padding: 5px;
                     float: right;
@@ -53,6 +54,7 @@ body {
             justify-content: space-evenly;
             align-items: center;
             margin: 5px;
+            margin-right: 1%;
 
             .form-group {
                 position: relative;
@@ -116,7 +118,7 @@ body {
         color: $blue;
         max-width: 600px;
         margin-top: 10px;
-        margin-bottom: 50px;
+        margin-bottom: 80px;
 
         .write-a-tweet {
             display: flex;
@@ -155,29 +157,30 @@ body {
 
         .tweets {
             width: 100%;
+            height: auto;
 
             .card {
                 position: relative;
-                padding: 5px;
+                padding-bottom: 30px;
                 border-bottom: 1px solid $background;
 
                 img {
                     max-height: 50px;
                     border-radius: 50%;
                     margin: 10px;
-                    display: block;
+                    vertical-align: top;
+                    top: 8%;
                 }
 
-                .user-info {
-                    padding: 0 40px;
+                .card-body {
                     width: 90%;
                     position: absolute;
                     margin-left: 30px;
                     vertical-align: top;
-                    top: 50%;
-                    transform: translateY(-50%);
+                    top: 8%;
                     
-                    .alligned {
+                    .aligned {
+                        padding: 0 40px;
                         display: flex;
                         flex-direction: row;
                         margin-bottom: 5px;
@@ -200,9 +203,262 @@ body {
                     .tweet {
                         width: 100%;
                         color: #14171a;
+                        padding: 0 40px;
+                        padding-bottom: 8px;
+                    }
+
+                    .aligned-icons {
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: flex-start;
+                        margin-bottom: 5px;
+                        padding-bottom: 8px;
+                        color: #657786;
+                        margin-right: 250px;
+                        margin-left: 20px;
+                        
+                        .glyphicon {
+                            &:hover {
+                                color: green;
+                                cursor: pointer;
+                            }
+                        }
+
+                        .tweet-info {
+                            margin: 2px;
+                            font-weight: bold;
+                            font-size: 12px;
+                        }
                     }
                 }
             } 
         }
+
+        .who-to-follow-card {
+            width: 288px;
+            position:absolute;
+            top: 9%;
+            right: 3%;
+            background: white;
+            color: #14171a;
+
+            header {
+                display: flex;
+                flex-direction: row;
+                margin: 5px;
+                padding-top: 10px;
+                padding-left: 10px;
+
+                .title {
+                    font-size: 18px;
+                    color: #14171a;
+                    font-weight: bold;
+                    word-break: break-all;
+                }
+
+                .subtitle {
+                    color: $blue;
+                    font-weight: normal;
+                    font-size: 12px;
+                    margin-left: 10px;
+                    line-height: 25px;
+                    &:hover {
+                        cursor: pointer;
+                        text-decoration: underline;
+                    }
+                }
+            }
+
+            .recommendations {
+                border-bottom: 1px solid $background;
+                height: 80px;
+                .aligned-users {
+                    display: flex;
+                    flex-direction: row;
+                    img {
+                        max-height: 50px;
+                        border-radius: 50%;
+                        margin: 2%;
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
+                    .name {
+                        font-size: 14px;
+                        color: #14171a;
+                        font-weight: bold;
+                        word-break: break-all;
+                        margin-top: 3%;
+                        margin-left: 2%;
+                        &:hover {
+                            cursor: pointer;
+                        }
+                    }
+                    .username {
+                        color: #657786;
+                        font-weight: normal;
+                        font-size: 14px;
+                        margin-left: 5px;
+                        margin-top: 3%;
+                    }
+                }
+                button {
+                    margin-left: 65px;
+                    background: white;
+                    color:$blue;
+                    font-weight: bolder;
+                    font-size: 12px;
+                    border-radius: 100px;
+                    border: 1px solid $blue;
+                    height: 28px;
+                    width: 80px;
+                    &:hover {
+                        cursor: pointer;
+                        background: rgba(139, 189, 253, 0.5)
+                    }
+                    transform: translateY(-115%);
+                }
+            }
+            footer {
+                padding: 20px;
+                i {
+                    color: $blue;
+                    font-weight: normal;
+                    font-size: 12px;
+                    margin-left: 10px;
+                    &:hover {
+                        cursor: pointer;
+                        text-decoration: underline;
+                    }
+                    vertical-align: middle;
+                }
+
+                .glyphicon {
+                    color: $blue;
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
+
+            } 
+
+        }
+
+        .user-profile {
+            width: 288px;
+            height: 220px;
+            position:absolute;
+            top: 9%;
+            left: 3%;
+            background: white;
+            color: #14171a;
+
+            img {
+                width: 100%;
+            }
+
+            header {
+                img {
+                    width: 27%;
+                    border-radius: 50%;
+                    margin-left: 3%;
+                    transform: translateY(-40%);
+                    border: 4px solid white;
+                }
+
+                h1 {
+                    font-size: 18px;
+                    color: #14171a;
+                    font-weight: bold;
+                    word-break: break-all;
+                    transform: translateY(-350%) translateX(33%);
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
+
+                h2 {
+                    color: #657786;
+                    font-weight: normal;
+                    font-size: 16px;
+                    margin-left: 5px;
+                    margin-top: 3%;
+                    transform: translateY(-410%) translateX(30%);
+                }
+            }
+            .user-stats {
+                display: flex;
+                flex-direction: row;
+                margin: 5px;
+
+                h3 {
+                    justify-content: space-evenly;
+                    align-items: center;
+                    font-size: 13px;
+                    font-weight: bold;
+                    padding: 15px;
+                    color: #66757f;
+                    transform: translateY(-120%)
+                }
+
+                span {
+                    color: $blue;
+                    font-size: 20px;
+                }
+            }
+
+        }
+
+        .trends {
+            width: 288px;
+            position:absolute;
+            top: 45%;
+            left: 3%;
+            background: white;
+
+            header {
+                display: flex;
+                flex-direction: row;
+                margin: 5%;
+
+                h1 {
+                    color: #14171a;
+                    font-size: 18px;
+                    font-weight: bolder;
+                }
+    
+                h4 {
+                    color: $blue;
+                    font-weight: normal;
+                    font-size: 12px;
+                    margin-left: 10px;
+                    margin-top: 4px;
+                    &:hover {
+                        text-decoration: underline;
+                        cursor: pointer;
+                    }
+                }    
+            }
+
+            .each-trend {
+                margin: 5%;
+                &:hover {
+                    cursor: pointer;
+                    text-decoration: underline;
+                }
+
+                h2 {
+                    color: $blue;
+                    font-size: 14px;
+                    font-weight: bold;
+                }
+                span {
+                    font-size: 12px;
+                    color: #66757f;
+                }
+            }
+
+        }
+
     }
 }
