changing some icons

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,6 @@ $blue: #1da1f2;
 
 * {
     margin: 0 auto;
-    // overflow: hidden;
     font-family: 'Helvetica', 'Arial', sans-serif;
     font-style: normal;
 
@@ -85,7 +84,8 @@ body {
             img {
                 max-height: 30px;
                 margin-left: 20px;
-                margin-right: 20px;    
+                margin-right: 20px;
+                border-radius: 50%;    
                 &:hover {
                     cursor: pointer;
                 }
@@ -128,9 +128,10 @@ body {
             background-color: #E8F4FB;
 
             img {
-                max-height: 30px; 
+                max-height: 35px; 
                 margin-left: 20px;
                 margin-right: 10px;
+                border-radius: 50%;
             }
 
             .form-group {
